# crun-vm

./: .editorconfig  .gitignore  .gitlab-ci.yml  .packit.yaml  Cargo.toml  Makefile  README.md  build.rs  lint.sh  test.sh
.config/: nextest.toml
.github/: renovate.json5
.github/workflows/: lint.yml  release.yml
docs/: 1-installing.md  2-podman-docker.md  3-kubernetes.md  3-systemd.md  4-internals.md  4-kubernetes.md  5-crun-vm.1.ronn
docs/src/man/: crun-vm.md
embed/: entrypoint.sh  exec.sh  virtiofsd.sh
embed/bootc/: config.json  entrypoint.sh  prepare.sh
examples/cloud-init/: README.md
examples/cloud-init/config/: meta-data  user-data
examples/ignition/: README.md  config.ign
examples/kubernetes/: README.md  minikube-start.sh
examples/minikube/: README.md  minikube-start.sh
examples/quadlet/: README.md
plans/: main.fmf  tests.fmf
rpm/: crun-vm.spec
runner/: Containerfile  domain.xml  entrypoint.sh
scripts/: entrypoint.sh  exec.sh
src/: create.rs  crun.rs  exec.rs  lib.rs  main.rs  runner.sh  util.rs
src/commands/: create.rs  delete.rs  entrypoint.sh  exec.rs  mod.rs
src/commands/create/: custom_opts.rs  domain.rs  engine.rs  entrypoint.sh  first_boot.rs  mod.rs  runtime_env.rs
tests/: env.sh  run.rs
tests/t/: bootc-cached.sh  bootc-disk-size.sh  bootc-rootfs.sh  cloud-init.sh  emulated.sh  hostname.sh  ignition.sh  mount.sh  persistent.sh  publish.sh  random-ssh-key-pair.sh  stop-start.sh
tests/util/: mod.rs
util/: extract-vm-image.sh  minikube-start.sh  package-vm-image.sh
