[package]
name = "crun-qemu"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-2.0-or-later"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["cargo", "derive", "std"]

[dependencies.lazy_static]
version = "1.1"
default-features = false

[dependencies.liboci-cli]
version = "0.3.0"
default-features = false

[dependencies.nix]
version = "0.27.0"
default-features = false
features = ["fs", "mount"]

[dependencies.num_cpus]
version = "1.16"
default-features = false

[dependencies.oci-spec]
version = "0.6.0"
default-features = false
features = ["runtime"]

[dependencies.regex]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.9.0"

[dependencies.sysinfo]
version = "0.29.0"
default-features = false

[dependencies.xml-rs]
version = "0.8.0"
default-features = false
