[package]
name = "crun-vm"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-2.0-or-later"

[dependencies.anyhow]
version = "1.0.77"

[dependencies.camino]
version = "1.1"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["cargo", "derive", "std"]

[dependencies.home]
version = "0.5.0"

[dependencies.lazy_static]
version = "1.1"
default-features = false

[dependencies.liboci-cli]
version = "0.3.0"
default-features = false

[dependencies.minidom]
version = "0.15.2"

[dependencies.nix]
version = "0.28.0"
default-features = false
features = ["fs", "mount"]

[dependencies.num_cpus]
version = "1.0"
default-features = false

[dependencies.oci-spec]
version = "0.6.0"
default-features = false
features = ["runtime"]

[dependencies.regex]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.rust-embed]
version = "8.0"
default-features = false
features = ["debug-embed"]

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.9.0"

[dependencies.urlencoding]
version = "2.0"

[dependencies.xml-rs]
version = "0.8.0"
default-features = false
