[package]
name = "crun-vm"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
license = "GPL-2.0-or-later"

[dependencies.anyhow]
version = "1.0.97"

[dependencies.camino]
version = "1.1.9"

[dependencies.clap]
version = "4.5.34"
default-features = false
features = ["cargo", "derive", "std"]

[dependencies.home]
version = "0.5.9"

[dependencies.lazy_static]
version = "1.5.0"
default-features = false

[dependencies.liboci-cli]
version = "0.5.3"
default-features = false

[dependencies.minidom]
version = "0.15.2"

[dependencies.nix]
version = "0.29.0"
default-features = false
features = ["fs", "mount"]

[dependencies.num_cpus]
version = "1.16.0"
default-features = false

[dependencies.oci-spec]
version = "0.7.1"
default-features = false
features = ["runtime"]

[dependencies.regex]
version = "1.10.6"
default-features = false
features = ["std"]

[dependencies.rust-embed]
version = "8.6.0"
default-features = false
features = ["debug-embed"]

[dependencies.serde]
version = "1.0.218"

[dependencies.serde_json]
version = "1.0.140"

[dependencies.serde_yaml]
version = "0.9.34"

[dependencies.urlencoding]
version = "2.1.3"

[dependencies.xml-rs]
version = "0.8.25"
default-features = false
